--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,5 +1,12 @@
+version: 1.0
+build:
+  commands:
+    build:
+      - pip3 install -r requirements.txt
 run:
-  runtime-version: 3.11
+  runtime-version: 3.11.10
   pre-run:  
     - pip3 install -r requirements.txt sentence-transformers==4.1.0 peft==0.15.2
   command: uvicorn api:app --host 0.0.0.0 --port 8080
+  network:
+    port: 8000
